# gallaflow

./: .gitignore  AGENTS.md  README.md
explore/: explore.ipynb  explore_daily.ipynb  get_cfs_daily_v2.py  get_cfs_hourly.py  get_hourly.py  get_sntl_daily.py  hello.py  hybrid.ipynb  merge_daily.py  merge_hourly.py  prophet_daily.ipynb  pyproject.toml  requirements.txt  xgb_daily.py  xgb_daily2.ipynb  xgb_prophet.ipynb
explore/.ipynb_checkpoints/: explore-checkpoint.ipynb  get_cfs_daily-checkpoint.py  prophet_daily-checkpoint.ipynb
explore/data/: daily.csv  daily_cfs.csv  daily_cfs_aggregated.csv  daily_sntl.csv  daily_v2.csv
explore/data/raw/: cfs-1990-01-01T00:00.json  cfs-1991-01-01T00:00.json  cfs-1992-01-01T00:00.json  cfs-1993-01-01T00:00.json  cfs-1994-01-01T00:00.json  cfs-daily.txt  sntl-1990-01-01 00:00.json  sntl-1990-01-01.json  sntl-1991-01-01 00:00.json  sntl-1991-01-01.json  sntl-1992-01-01 00:00.json  sntl-1992-01-01.json  sntl-1993-01-01 00:00.json  sntl-1993-01-01.json  sntl-1994-01-01 00:00.json  sntl-1994-01-01.json  sntl-1995-01-01 00:00.json  sntl-1995-01-01.json  sntl-1996-01-01 00:00.json  sntl-1996-01-01.json  sntl-1997-01-01 00:00.json  sntl-1997-01-01.json  sntl-1998-01-01 00:00.json  sntl-1998-01-01.json  sntl-1999-01-01 00:00.json  sntl-1999-01-01.json  sntl-2000-01-01 00:00.json  sntl-2000-01-01.json  sntl-2001-01-01 00:00.json  sntl-2001-01-01.json  sntl-2002-01-01 00:00.json  sntl-2002-01-01.json  sntl-2003-01-01 00:00.json  sntl-2003-01-01.json  sntl-2004-01-01 00:00.json  sntl-2004-01-01.json  sntl-2005-01-01 00:00.json  (+29 more)
